style: fix overflow in about section homepage

--- a/src/components/Home/about/about.css
+++ b/src/components/Home/about/about.css
@@ -42,9 +42,10 @@
     position: relative;
     justify-content: end;
     width: 70%;
-    height: 300px;
-    top: 150px;
-    right: -10%;
+    height: clamp(100px,50%,300px);
+    /* top: 150px; */
+    right: 0;
+    /* overflow: hidden; */
 
     /* margin: 5% 5% 2%; */
     /* outline: dotted black; */
@@ -86,11 +87,21 @@ ul.data h2 {
     max-width: 50%;
     } */
 
+.snowflake-container{
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding-bottom: 10px;
+    height: calc(100% + 10%);
+    width: 100vw;
+    overflow: hidden;
+}
 .bg-snowflake {
+    width: clamp(400px,50%,550px);
     z-index: -1;
     position: absolute;
     rotate: calc(15deg);
-    top: 15%;
+    bottom: clamp(1%, 5% ,15%);
     right: -1%;
     
 }
